--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -312,6 +312,8 @@
     <Compile Include="Reportes\Contabilidad\CONTA_004_Bus.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_005_Bus.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_006_Bus.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_007_Bus.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_008_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_002_Bus.cs" />
