--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -343,6 +343,8 @@
     <Compile Include="Reportes\Contabilidad\CONTA_003_balances_Info.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_005_Info.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_006_Info.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_008_Info.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_007_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_002_diario_Info.cs" />
