--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -738,6 +738,12 @@
     <Compile Include="Reportes\Contabilidad\CONTA_003_BG_Rpt.Designer.cs">
       <DependentUpon>CONTA_003_BG_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_008_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_008_Rpt.Designer.cs">
+      <DependentUpon>CONTA_008_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Contabilidad\CONTA_003_ER_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -10335,6 +10341,7 @@
     <Content Include="Areas\General\Views\TipoDocumentoTalonario\ActualizacionMasiva.cshtml" />
     <Content Include="Areas\General\Views\TipoDocumentoTalonario\_GridViewPartial_ActualizacionMasiva.cshtml" />
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_007.cshtml" />
+    <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_008.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
@@ -10563,6 +10570,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Contabilidad\CONTA_003_BG_Rpt.resx">
       <DependentUpon>CONTA_003_BG_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Contabilidad\CONTA_008_Rpt.resx">
+      <DependentUpon>CONTA_008_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Contabilidad\CONTA_003_ER_Rpt.resx">
       <DependentUpon>CONTA_003_ER_Rpt.cs</DependentUpon>
