--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1357,6 +1357,9 @@
     <Compile Include="Reportes\Base\SPCONTA_008_Result.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Base\SPCONTA_009_Result.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Base\SPCXC_004_Result.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
@@ -1779,6 +1782,7 @@
     <Compile Include="Reportes\Contabilidad\CONTA_003_balances_Data.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_005_Data.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_006_Data.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_009_Data.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_008_Data.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_007_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_Data.cs" />
