--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2068,6 +2068,12 @@
     <Compile Include="ro_prestamo.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
+    <Compile Include="ro_PrestamoMasivo.cs">
+      <DependentUpon>Model_rrhh.tt</DependentUpon>
+    </Compile>
+    <Compile Include="ro_PrestamoMasivo_Det.cs">
+      <DependentUpon>Model_rrhh.tt</DependentUpon>
+    </Compile>
     <Compile Include="ro_prestamo_detalle.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
@@ -2183,6 +2189,8 @@
     <Compile Include="RRHH\ro_periodo_Data.cs" />
     <Compile Include="RRHH\ro_periodo_x_ro_Nomina_TipoLiqui_Data.cs" />
     <Compile Include="RRHH\ro_permiso_x_empleado_Data.cs" />
+    <Compile Include="RRHH\ro_PrestamoMasivo_Data.cs" />
+    <Compile Include="RRHH\ro_PrestamoMasivo_Det_Data.cs" />
     <Compile Include="RRHH\ro_prestamo_Data.cs" />
     <Compile Include="RRHH\ro_prestamo_detalle_Data.cs" />
     <Compile Include="RRHH\ro_rdep_Data.cs" />
