--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -348,6 +348,7 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_012_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_013_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_014_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_018_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_015_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_016_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_017_Bus.cs" />
