--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1387,6 +1387,9 @@
     <Compile Include="Reportes\Base\SPCXP_016_Result.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Base\SPCXP_018_Result.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Base\SPFAC_005_Result.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
@@ -1818,6 +1821,7 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_012_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_013_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_014_Data.cs" />
+    <Compile Include="Reportes\CuentasPorPagar\CXP_018_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_015_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_016_Data.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_017_Data.cs" />
