--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -1033,6 +1033,12 @@
     <Compile Include="Reportes\CuentasPorPagar\CXP_017_Rpt.Designer.cs">
       <DependentUpon>CXP_017_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_018_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\CuentasPorPagar\CXP_018_Rpt.Designer.cs">
+      <DependentUpon>CXP_018_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Facturacion\FAC_001_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -10362,6 +10368,7 @@
     <Content Include="Areas\RRHH\Views\PrestamosMasivos\Nuevo.cshtml" />
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_009.cshtml" />
     <Content Include="Areas\RRHH\Views\PrestamosMasivos\_CmbSucursal.cshtml" />
+    <Content Include="Areas\Reportes\Views\CuentasPorPagarReportes\CXP_018.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
@@ -10737,6 +10744,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_017_Rpt.resx">
       <DependentUpon>CXP_017_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\CuentasPorPagar\CXP_018_Rpt.resx">
+      <DependentUpon>CXP_018_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Facturacion\FAC_001_Rpt.resx">
       <DependentUpon>FAC_001_Rpt.cs</DependentUpon>
