--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -129,12 +129,14 @@
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_motivo_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_Param_conta_x_sucursal_Bus.cs" />
+    <Compile Include="CuentasPorCobrar\cxc_LiquidacionRetProvDet_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_LiquidacionTarjetaDet_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_LiquidacionTarjeta_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_LiquidacionTarjeta_x_cxc_cobro_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_MotivoLiquidacionTarjeta_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_MotivoLiquidacionTarjeta_x_tb_sucursal_Bus.cs" />
     <Compile Include="CuentasPorCobrar\cxc_Parametro_Bus.cs" />
+    <Compile Include="CuentasPorCobrar\cxc_LiquidacionRetProv_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_tipo_Bus.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_x_CtaCble_Bus.cs" />
