--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -156,12 +156,14 @@
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_motivo_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_cobro_tipo_Param_conta_x_sucursal_Info.cs" />
+    <Compile Include="CuentasPorCobrar\cxc_LiquidacionRetProvDet_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_LiquidacionTarjetaDet_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_LiquidacionTarjeta_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_LiquidacionTarjeta_x_cxc_cobro_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_MotivoLiquidacionTarjeta_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_MotivoLiquidacionTarjeta_x_tb_sucursal_Info.cs" />
     <Compile Include="CuentasPorCobrar\cxc_Parametro_Info.cs" />
+    <Compile Include="CuentasPorCobrar\cxc_LiquidacionRetProv_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_tipo_Info.cs" />
     <Compile Include="CuentasPorPagar\cp_codigo_SRI_x_CtaCble_Info.cs" />
