--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10395,6 +10395,8 @@
     <Content Include="Areas\CuentasPorCobrar\Views\LiquidacionRetencionCliente\Nuevo.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\LiquidacionRetencionCliente\_GridViewPartial_LiquidacionRetencionClienteDet.cshtml" />
     <Content Include="Areas\CuentasPorCobrar\Views\LiquidacionRetencionCliente\_GridViewPartial_LiquidacionRetencionClienteXCruzar.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\LiquidacionRetencionCliente\Modificar.cshtml" />
+    <Content Include="Areas\CuentasPorCobrar\Views\LiquidacionRetencionCliente\Anular.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
