--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -2706,6 +2706,9 @@
     <Compile Include="vwro_area.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
+    <Compile Include="vwro_area_x_departamento.cs">
+      <DependentUpon>Model_rrhh.tt</DependentUpon>
+    </Compile>
     <Compile Include="vwro_EmpleadoNovedadCargaMasiva.cs">
       <DependentUpon>Model_rrhh.tt</DependentUpon>
     </Compile>
