--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -10397,6 +10397,7 @@
     <Content Include="Areas\CuentasPorCobrar\Views\LiquidacionRetencionCliente\Anular.cshtml" />
     <Content Include="Areas\RRHH\Views\DepartamentoPorArea\_CmbDivision.cshtml" />
     <Content Include="Areas\RRHH\Views\DepartamentoPorArea\_CmbArea.cshtml" />
+    <Content Include="Areas\Reportes\Views\InventarioReportes\INV_022.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Areas\CuentasPorPagar\Views\Proveedor\Anular.cshtml" />
