--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -711,6 +711,12 @@
     <Compile Include="Facturacion\Base\fa_parametro.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
+    <Compile Include="Facturacion\Base\fa_ProbabilidadCobro.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Facturacion\Base\fa_ProbabilidadCobroDet.cs">
+      <DependentUpon>Model_facturacion.tt</DependentUpon>
+    </Compile>
     <Compile Include="Facturacion\Base\fa_proforma.cs">
       <DependentUpon>Model_facturacion.tt</DependentUpon>
     </Compile>
@@ -835,6 +841,8 @@
     <Compile Include="Facturacion\fa_notaCreDeb_det_Data.cs" />
     <Compile Include="Facturacion\fa_notaCreDeb_x_fa_factura_NotaDeb_Data.cs" />
     <Compile Include="Facturacion\fa_parametro_Data.cs" />
+    <Compile Include="Facturacion\fa_ProbabilidadCobroDet_Data.cs" />
+    <Compile Include="Facturacion\fa_ProbabilidadCobro_Data.cs" />
     <Compile Include="Facturacion\fa_proforma_Data.cs" />
     <Compile Include="Facturacion\fa_proforma_det_Data.cs" />
     <Compile Include="Facturacion\fa_PuntoVta_Data.cs" />
