--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -335,6 +335,7 @@
     <Compile Include="Reportes\CuentasPorCobrar\CXC_007_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_008_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_009_Bus.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_012_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_011_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_010_Bus.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Bus.cs" />
