--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DevExpress.ExpressApp.v19.1, Version=19.1.3.0, Culture=neutral, PublicKeyToken=b88d1754d700e49a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -366,6 +367,7 @@
     <Compile Include="Reportes\CuentasPorCobrar\CXC_009_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_011_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_010_Info.cs" />
+    <Compile Include="Reportes\CuentasPorCobrar\CXC_012_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_detalle_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_001_Info.cs" />
     <Compile Include="Reportes\CuentasPorPagar\CXP_002_diario_Info.cs" />
