--- a/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
+++ b/ERP/Core.Erp.Bus/Core.Erp.Bus.csproj
@@ -322,6 +322,7 @@
     <Compile Include="Reportes\Contabilidad\CONTA_007_Bus.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_009_Bus.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_008_Bus.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_011_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Bus.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_002_Bus.cs" />
