--- a/ERP/Core.Erp.Web/Core.Erp.Web.csproj
+++ b/ERP/Core.Erp.Web/Core.Erp.Web.csproj
@@ -811,6 +811,12 @@
     <Compile Include="Reportes\Contabilidad\CONTA_011_Rpt.Designer.cs">
       <DependentUpon>CONTA_011_Rpt.cs</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_012_Rpt.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Reportes\Contabilidad\CONTA_012_Rpt.Designer.cs">
+      <DependentUpon>CONTA_012_Rpt.cs</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Rpt.cs">
       <SubType>Component</SubType>
     </Compile>
@@ -10426,6 +10432,7 @@
     <Content Include="Areas\Facturacion\Views\ProbabilidadCobro\Anular.cshtml" />
     <Content Include="Areas\Reportes\Views\CuentasPorCobrarReportes\CXC_012.cshtml" />
     <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_011.cshtml" />
+    <Content Include="Areas\Reportes\Views\ContabilidadReportes\CONTA_012.cshtml" />
     <None Include="Properties\PublishProfiles\p1.pubxml" />
     <None Include="Properties\PublishProfiles\PUBLICACION.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
@@ -10691,6 +10698,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\Contabilidad\CONTA_011_Rpt.resx">
       <DependentUpon>CONTA_011_Rpt.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Reportes\Contabilidad\CONTA_012_Rpt.resx">
+      <DependentUpon>CONTA_012_Rpt.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Reportes\CuentasPorCobrar\CXC_001_diario_Rpt.resx">
       <DependentUpon>CXC_001_diario_Rpt.cs</DependentUpon>
