--- a/ERP/Core.Erp.Data/Core.Erp.Data.csproj
+++ b/ERP/Core.Erp.Data/Core.Erp.Data.csproj
@@ -1384,6 +1384,9 @@
     <Compile Include="Reportes\Base\SPCONTA_011_Result.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
+    <Compile Include="Reportes\Base\SPCONTA_012_Result.cs">
+      <DependentUpon>Model_reportes.tt</DependentUpon>
+    </Compile>
     <Compile Include="Reportes\Base\SPCXC_004_Result.cs">
       <DependentUpon>Model_reportes.tt</DependentUpon>
     </Compile>
@@ -1826,6 +1829,7 @@
     <Compile Include="Reportes\Contabilidad\CONTA_008_Data.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_007_Data.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_011_Data.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_012_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Data.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_002_Data.cs" />
