--- a/ERP/Core.Erp.Info/Core.Erp.Info.csproj
+++ b/ERP/Core.Erp.Info/Core.Erp.Info.csproj
@@ -353,6 +353,7 @@
     <Compile Include="Reportes\Contabilidad\CONTA_007_Info.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_010_Info.cs" />
     <Compile Include="Reportes\Contabilidad\CONTA_011_Info.cs" />
+    <Compile Include="Reportes\Contabilidad\CONTA_012_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_diario_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_001_Info.cs" />
     <Compile Include="Reportes\CuentasPorCobrar\CXC_002_diario_Info.cs" />
